@@ -51,20 +51,20 @@
 ----
 
 PyThresh is a comprehensive and scalable **Python toolkit** for
-**thresholding outlier detection scores** in univariate/multivariate
-data. It has been written to work in tandem with PyOD and has similar
-syntax and data structures. However, it is not limited to this single
-library. PyThresh is meant to threshold likelihood scores generated by
-an outlier detector. It thresholds these likelihood scores and replaces
-the need to set a contamination level or have the user guess the amount
-of outliers that may exist in the dataset beforehand. These
-non-parametric methods were written to reduce the user's input/guess
-work and rather rely on statistics instead to threshold outlier
-likelihood scores. For thresholding to be applied correctly, the outlier
-detection likelihood scores must follow this rule: the higher the score,
-the higher the probability that it is an outlier in the dataset. All
-threshold functions return a binary array where inliers and outliers are
-represented by a 0 and 1 respectively.
+**thresholding outlier detection likelihood scores** in
+univariate/multivariate data. It has been written to work in tandem with
+PyOD and has similar syntax and data structures. However, it is not
+limited to this single library. PyThresh is meant to threshold
+likelihood scores generated by an outlier detector. It thresholds these
+likelihood scores and replaces the need to set a contamination level or
+have the user guess the amount of outliers that may exist in the dataset
+beforehand. These non-parametric methods were written to reduce the
+user's input/guess work and rather rely on statistics instead to
+threshold outlier likelihood scores. For thresholding to be applied
+correctly, the outlier detection likelihood scores must follow this
+rule: the higher the score, the higher the probability that it is an
+outlier in the dataset. All threshold functions return a binary array
+where inliers and outliers are represented by a 0 and 1 respectively.
 
 PyThresh includes more than 30 thresholding algorithms. These algorithms
 range from using simple statistical analysis like the Z-score to more
@@ -161,8 +161,8 @@ Key Attributes of threshold:
 
 -  **thresh_**: Return the threshold value that separates inliers from
    outliers. Outliers are considered all values above this threshold
-   value. Note the threshold value has been derived from likelihood scores
-   normalized between 0 and 1.
+   value. Note the threshold value has been derived from likelihood
+   scores normalized between 0 and 1.
 
 -  **confidence_interval_**: Return the lower and upper confidence
    interval of the contamination level. Only applies to the COMB
@@ -213,6 +213,8 @@ Unsupervised Anomaly Detection <https://arxiv.org/abs/2210.10487>`_
 | FILTER    | Filtering Based                           | [#filter1]_        | `pythresh.thresholds.filter module <https://pythresh.readthedocs.io/en/latest/pythresh.thresholds.html#module-pythresh.thresholds.filter>`_            |
 +-----------+-------------------------------------------+--------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------+
 | FWFM      | Full Width at Full Minimum                | [#fwfm1]_          | `pythresh.thresholds.fwfm module <https://pythresh.readthedocs.io/en/latest/pythresh.thresholds.html#module-pythresh.thresholds.fwfm>`_                |
++-----------+-------------------------------------------+--------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------+
+| GAMGMM    | Bayesian Gamma GMM                        | [#gamgmm1]_        | `pythresh.thresholds.gamgmm module <https://pythresh.readthedocs.io/en/latest/pythresh.thresholds.html#module-pythresh.thresholds.gamgmm>`_            |
 +-----------+-------------------------------------------+--------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------+
 | GESD      | Generalized Extreme Studentized Deviate   | [#gesd1]_          | `pythresh.thresholds.gesd module <https://pythresh.readthedocs.io/en/latest/pythresh.thresholds.html#module-pythresh.thresholds.gesd>`_                |
 +-----------+-------------------------------------------+--------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------+
@@ -381,6 +383,11 @@ the threshold types available in PyThresh.
 
    `Sparse Auto-Regressive: Robust Estimation of AR Parameters
    <https://arxiv.org/abs/1306.3317>`_
+
+.. [#gamgmm]
+
+   `Estimating the Contamination Factor's Distribution in Unsupervised Anomaly
+   Detection <https://arxiv.org/abs/2210.10487>`_
 
 .. [#gesd1]
 
