@@ -51,20 +51,20 @@
 ----
 
 PyThresh is a comprehensive and scalable **Python toolkit** for
-**thresholding outlier detection scores** in univariate/multivariate
-data. It has been written to work in tandem with PyOD and has similar
-syntax and data structures. However, it is not limited to this single
-library. PyThresh is meant to threshold likelihood scores generated by
-an outlier detector. It thresholds these likelihood scores and replaces
-the need to set a contamination level or have the user guess the amount
-of outliers that may exist in the dataset beforehand. These
-non-parametric methods were written to reduce the user's input/guess
-work and rather rely on statistics instead to threshold outlier
-likelihood scores. For thresholding to be applied correctly, the outlier
-detection likelihood scores must follow this rule: the higher the score,
-the higher the probability that it is an outlier in the dataset. All
-threshold functions return a binary array where inliers and outliers are
-represented by a 0 and 1 respectively.
+**thresholding outlier detection likelihood scores** in
+univariate/multivariate data. It has been written to work in tandem with
+PyOD and has similar syntax and data structures. However, it is not
+limited to this single library. PyThresh is meant to threshold
+likelihood scores generated by an outlier detector. It thresholds these
+likelihood scores and replaces the need to set a contamination level or
+have the user guess the amount of outliers that may exist in the dataset
+beforehand. These non-parametric methods were written to reduce the
+user's input/guess work and rather rely on statistics instead to
+threshold outlier likelihood scores. For thresholding to be applied
+correctly, the outlier detection likelihood scores must follow this
+rule: the higher the score, the higher the probability that it is an
+outlier in the dataset. All threshold functions return a binary array
+where inliers and outliers are represented by a 0 and 1 respectively.
 
 PyThresh includes more than 30 thresholding algorithms. These algorithms
 range from using simple statistical analysis like the Z-score to more
@@ -149,6 +149,8 @@ Unsupervised Anomaly Detection <https://arxiv.org/abs/2210.10487>`_
 | FILTER    | Filtering Based                                                | :cite:`hashemi2019filter`         |
 +-----------+----------------------------------------------------------------+-----------------------------------+
 | FWFM      | Full Width at Full Minimum                                     | :cite:`joneidi2013fwfm`           |
++-----------+----------------------------------------------------------------+-----------------------------------+
+| GAMGMM    | Bayesian Gamma GMM                                             | :cite:`perini2023gamgmm`          |
 +-----------+----------------------------------------------------------------+-----------------------------------+
 | GESD      | Generalized Extreme Studentized Deviate                        | :cite:`alrawashdeh2021gesd`       |
 +-----------+----------------------------------------------------------------+-----------------------------------+
