@@ -134,6 +134,15 @@
   copyright = {Creative Commons Attribution 4.0 International}
 }
 
+@misc{perini2023gamgmm,
+      title={Estimating the Contamination Factor's Distribution in Unsupervised Anomaly Detection},
+      author={Lorenzo Perini and Paul Buerkner and Arto Klami},
+      year={2022},
+      eprint={2210.10487},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
 @article{alrawashdeh2021gesd,
   author = {Mufda Jameel Alrawashdeh},
   doi = {doi:10.1515/dema-2021-0041},
