@@ -1,11 +1,14 @@
 import numpy as np
 import scipy.stats as stats
 from scipy.special import ndtr
+from sklearn.decomposition import TruncatedSVD
+from sklearn.utils import check_array
 
 
 def normalize(data):
 
-    return ((data - data.min()) / (data.max() - data.min()))
+    return ((data - data.min(axis=0)) /
+            (data.max(axis=0) - data.min(axis=0)))
 
 
 def cut(decision, limit):
@@ -35,3 +38,28 @@ def gen_cdf(data, lower, upper, size):
                          for item in dat_range))
 
     return cdf, dat_range
+
+
+def check_scores(decision, random_state=None):
+
+    if (np.asarray(decision).ndim == 2) & (np.atleast_2d(decision).shape[1] > 1):
+
+        decision = check_array(decision, ensure_2d=True)
+        decision = decompose(decision)
+
+    else:
+
+        decision = check_array(decision, ensure_2d=False).squeeze()
+        decision = np.atleast_2d(decision).T
+
+    return decision
+
+
+def decompose(data, random_state=None):
+
+    # Decompose score space to 1D for thresholding
+    decomp = TruncatedSVD(n_components=1, random_state=random_state)
+
+    data = decomp.fit_transform(normalize(data))
+
+    return data
